// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deep Operation Test Suite should support deep composition creation 1`] = `
{
  "@odata.context": "$metadata#Person(addresses())/$entity",
  "ID": 1,
  "Name": "Person 1",
  "addresses": [
    {
      "City": "Chengdu",
      "Country": "CN",
      "ID": 1,
      "up__ID": 1,
    },
    {
      "City": "Shanghai",
      "Country": "CN",
      "ID": 2,
      "up__ID": 1,
    },
    {
      "City": "Shanghai",
      "Country": "CN",
      "ID": 3,
      "up__ID": 1,
    },
  ],
}
`;

exports[`Deep Operation Test Suite should support deep query 1`] = `
{
  "@odata.context": "$metadata#Person(addresses())/$entity",
  "ID": 1,
  "Name": "Person 1 Updated by PATCH",
  "addresses": [
    {
      "City": "Chengdu",
      "Country": "CN",
      "ID": 1,
      "up__ID": 1,
    },
    {
      "City": null,
      "Country": "CN",
      "ID": 3,
      "up__ID": 1,
    },
  ],
}
`;

exports[`Deep Operation Test Suite should support deep update scenario: patch update 1`] = `
{
  "@odata.context": "$metadata#Person(addresses())/$entity",
  "ID": 1,
  "Name": "Person 1 Updated by PATCH",
  "addresses": [
    {
      "City": "Chengdu",
      "Country": "CN",
      "ID": 1,
      "up__ID": 1,
    },
    {
      "City": null,
      "Country": "CN",
      "ID": 3,
      "up__ID": 1,
    },
  ],
}
`;

exports[`Deep Operation Test Suite should support deep update scenario: put update 1`] = `
{
  "@odata.context": "$metadata#Person(addresses())/$entity",
  "ID": 1,
  "Name": "Person 1 Updated by PUT",
  "addresses": [
    {
      "City": "Unknown",
      "Country": "UK",
      "ID": 1,
      "up__ID": 1,
    },
    {
      "City": "Shanghai Updated",
      "Country": "CN",
      "ID": 3,
      "up__ID": 1,
    },
  ],
}
`;
